fixes dark mode theme

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body{
-    background-color: #e5dcf7;
-    width: 100vw;
-    overflow: hidden;
-    font-family: sans-serif;
-}
